# taipan

./: .gitignore  LICENSE  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: workflow.yml
src/: abstract.py  action.py  enums.py  event.py  fight.py  game.py  goods.py  graphics.py  main.py  orders.py  player.py  ports.py  string.py  ui.py
src/taipan/: abstract.py  action.py  enums.py  event.py  fight.py  game.py  main.py  strings.py  ui.py
src/taipan/ui/: __init__.py  abstract.py  functions.py  game_ui.py  graphics.py
tests/: objects.py
