[metadata]
name = taipan
version = 0.0.1
license = MIT
description = Python implementation of the classic Apple II game
long_description = file: README.rst
author = Nelson Love
author_email = nelson@nelson.love
classifiers=
   Development Status :: 3 - Alpha
   Environment :: Console :: Curses
   License :: OSI Approved :: MIT License
   Topic :: Games/Entertainment

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   blessed

[options.packages.find]
where=src